--- a/src/templates/screens/admin/ModifyComponentAttrib.vm
+++ b/src/templates/screens/admin/ModifyComponentAttrib.vm
@@ -41,7 +41,7 @@
   </TD>
  </TR>
  <TR>
-  <TD HEIGHT="1" BGCOLOR="#000000"><SPACER TYPE="block" HEIGHT="1"></TD>
+  <TD HEIGHT="1" BGCOLOR="#000000"></TD>
  </TR>
 </TABLE>
 <P>
