--- a/src/templates/screens/Assign.vm
+++ b/src/templates/screens/Assign.vm
@@ -31,7 +31,7 @@
       </TD>
     </TR>
     <TR>
-      <TD HEIGHT="1" BGCOLOR="#000000"><SPACER TYPE="block" HEIGHT="1"></TD>
+      <TD HEIGHT="1" BGCOLOR="#000000"></TD>
     </TR>
 </TABLE>
 
@@ -52,7 +52,7 @@
 <!-- current project and login -->
   <TABLE BORDER="0" CELLPADDING="0" CELLSPACING="0" WIDTH="100%">
     <TR>
-      <TD BGCOLOR="#FFFFFF" HEIGHT="1"><SPACER HEIGHT="1" TYPE="block"></TD>
+      <TD BGCOLOR="#FFFFFF" HEIGHT="1"></TD>
       <TD ALIGN="right" NOWRAP CLASS="PlainText">Logged in: <A HREF="/">jon 123</A></TD>
     </TR>
   </TABLE>
@@ -75,7 +75,7 @@
 </TABLE>
 <TABLE BORDER="0" CELLPADDING="0" CELLSPACING="0" WIDTH="100%">
 	<TR>
-		<TD HEIGHT="2" COLSPAN="5"><SPACER TYPE="block" HEIGHT="2"></TD>
+		<TD HEIGHT="2" COLSPAN="5"></TD>
 	</TR>
 	<TR>
 		<TD VALIGN="top" CLASS="TableDataHeader">Issue ID#:</TD>
@@ -85,28 +85,28 @@
 		<TD VALIGN="top" CLASS="TableData">Closed</TD>
 	</TR>
 	<TR>
-		<TD HEIGHT="2" COLSPAN="5"><SPACER TYPE="block" HEIGHT="2"></TD>
+		<TD HEIGHT="2" COLSPAN="5"></TD>
 	</TR>
 	<TR>
-		<TD HEIGHT="1" COLSPAN="5" BGCOLOR="#cccccc"><SPACER TYPE="block" HEIGHT="1"></TD>
+		<TD HEIGHT="1" COLSPAN="5" BGCOLOR="#cccccc"></TD>
 	</TR>
 
 	<TR>
-		<TD HEIGHT="2" COLSPAN="5"><SPACER TYPE="block" HEIGHT="2"></TD>
+		<TD HEIGHT="2" COLSPAN="5"></TD>
 	</TR>
 	<TR>
 		<TD VALIGN="top" CLASS="TableDataHeader">Assigned to:</TD>
 		<TD VALIGN="top" CLASS="TableData"><A HREF="mailto:jon@collab.net">jon@collab.net</A></TD>
 	</TR>
 	<TR>
-		<TD HEIGHT="2" COLSPAN="5"><SPACER TYPE="block" HEIGHT="2"></TD>
+		<TD HEIGHT="2" COLSPAN="5"></TD>
 	</TR>
 	<TR>
-		<TD HEIGHT="1" COLSPAN="5" BGCOLOR="#cccccc"><SPACER TYPE="block" HEIGHT="1"></TD>
+		<TD HEIGHT="1" COLSPAN="5" BGCOLOR="#cccccc"></TD>
 	</TR>
 
 	<TR>
-		<TD HEIGHT="2" COLSPAN="5"><SPACER TYPE="block" HEIGHT="2"></TD>
+		<TD HEIGHT="2" COLSPAN="5"></TD>
 	</TR>
 	<TR>
 		<TD VALIGN="top" CLASS="TableDataHeader">Component:</TD>
@@ -116,28 +116,28 @@
 		<TD VALIGN="top" CLASS="TableData">$resolution</TD>
 	</TR>
 	<TR>
-		<TD HEIGHT="2" COLSPAN="5"><SPACER TYPE="block" HEIGHT="2"></TD>
+		<TD HEIGHT="2" COLSPAN="5"></TD>
 	</TR>
 	<TR>
-		<TD HEIGHT="1" COLSPAN="5" BGCOLOR="#cccccc"><SPACER TYPE="block" HEIGHT="1"></TD>
+		<TD HEIGHT="1" COLSPAN="5" BGCOLOR="#cccccc"></TD>
 	</TR>
 	
 	<TR>
-		<TD HEIGHT="2" COLSPAN="5"><SPACER TYPE="block" HEIGHT="2"></TD>
+		<TD HEIGHT="2" COLSPAN="5"></TD>
 	</TR>
 	<TR>
 		<TD VALIGN="top" CLASS="TableDataHeader">Summary:</TD>
 		<TD VALIGN="top" COLSPAN="4" CLASS="TableData">UI widgets don't accurately reflect the native widgets found on each wireless delivery platform</TD>
 	</TR>
 	<TR>
-		<TD HEIGHT="2" COLSPAN="5"><SPACER TYPE="block" HEIGHT="2"></TD>
+		<TD HEIGHT="2" COLSPAN="5"></TD>
 	</TR>
 	<TR>
-		<TD HEIGHT="1" COLSPAN="5" BGCOLOR="#cccccc"><SPACER TYPE="block" HEIGHT="1"></TD>
+		<TD HEIGHT="1" COLSPAN="5" BGCOLOR="#cccccc"></TD>
 	</TR>
 	
 	<TR>
-		<TD HEIGHT="2" COLSPAN="5"><SPACER TYPE="block" HEIGHT="2"></TD>
+		<TD HEIGHT="2" COLSPAN="5"></TD>
 	</TR>
 	<TR>
 		<TD VALIGN="top" CLASS="TableDataHeader">Description:</TD>
@@ -147,14 +147,14 @@
 		<TD VALIGN="top" CLASS="TableData">$type</TD>
 	</TR>
 	<TR>
-		<TD HEIGHT="2" COLSPAN="5"><SPACER TYPE="block" HEIGHT="2"></TD>
+		<TD HEIGHT="2" COLSPAN="5"></TD>
 	</TR>
 	<TR>
-		<TD HEIGHT="1" COLSPAN="5" BGCOLOR="#cccccc"><SPACER TYPE="block" HEIGHT="1"></TD>
+		<TD HEIGHT="1" COLSPAN="5" BGCOLOR="#cccccc"></TD>
 	</TR>
 	
 	<TR>
-		<TD HEIGHT="2" COLSPAN="5"><SPACER TYPE="block" HEIGHT="2"></TD>
+		<TD HEIGHT="2" COLSPAN="5"></TD>
 	</TR>
 	<TR>
 		<TD VALIGN="top" CLASS="TableDataHeader">Reported by:</TD>
@@ -164,14 +164,14 @@
 		<TD VALIGN="top" CLASS="TableData">2000-06-13</TD>
 	</TR>
 	<TR>
-		<TD HEIGHT="2" COLSPAN="5"><SPACER TYPE="block" HEIGHT="2"></TD>
+		<TD HEIGHT="2" COLSPAN="5"></TD>
 	</TR>
 	<TR>
-		<TD HEIGHT="1" COLSPAN="5" BGCOLOR="#cccccc"><SPACER TYPE="block" HEIGHT="1"></TD>
+		<TD HEIGHT="1" COLSPAN="5" BGCOLOR="#cccccc"></TD>
 	</TR>
 	
 	<TR>
-		<TD HEIGHT="2" COLSPAN="5"><SPACER TYPE="block" HEIGHT="2"></TD>
+		<TD HEIGHT="2" COLSPAN="5"></TD>
 	</TR>
 	<TR>
 		<TD VALIGN="top">&nbsp;</TD>
@@ -179,14 +179,14 @@
 		<TD VALIGN="top" CLASS="TableData">2000-08-21</TD>
 	</TR>
 	<TR>
-		<TD HEIGHT="2" COLSPAN="5"><SPACER TYPE="block" HEIGHT="2"></TD>
+		<TD HEIGHT="2" COLSPAN="5"></TD>
 	</TR>
 	<TR>
-		<TD HEIGHT="1" COLSPAN="5" BGCOLOR="#cccccc"><SPACER TYPE="block" HEIGHT="1"></TD>
+		<TD HEIGHT="1" COLSPAN="5" BGCOLOR="#cccccc"></TD>
 	</TR>
 	
 	<TR>
-		<TD HEIGHT="2" COLSPAN="5"><SPACER TYPE="block" HEIGHT="2"></TD>
+		<TD HEIGHT="2" COLSPAN="5"></TD>
 	</TR>
 	<TR>
 		<TD VALIGN="top" CLASS="TableDataHeader">Severity</TD>
@@ -196,14 +196,14 @@
 		<TD VALIGN="top" CLASS="TableData">P4</TD>
 	</TR>
 	<TR>
-		<TD HEIGHT="2" COLSPAN="5"><SPACER TYPE="block" HEIGHT="2"></TD>
+		<TD HEIGHT="2" COLSPAN="5"></TD>
 	</TR>
 	<TR>
-		<TD HEIGHT="1" COLSPAN="5" BGCOLOR="#cccccc"><SPACER TYPE="block" HEIGHT="1"></TD>
+		<TD HEIGHT="1" COLSPAN="5" BGCOLOR="#cccccc"></TD>
 	</TR>
 	
 	<TR>
-		<TD HEIGHT="2" COLSPAN="5"><SPACER TYPE="block" HEIGHT="2"></TD>
+		<TD HEIGHT="2" COLSPAN="5"></TD>
 	</TR>
 	<TR>
 		<TD VALIGN="top" CLASS="TableDataHeader">Keywords</TD>
@@ -213,14 +213,14 @@
 		<TD VALIGN="top" CLASS="TableData">12</TD>
 	</TR>
 	<TR>
-		<TD HEIGHT="2" COLSPAN="5"><SPACER TYPE="block" HEIGHT="2"></TD>
+		<TD HEIGHT="2" COLSPAN="5"></TD>
 	</TR>
 	<TR>
-		<TD HEIGHT="1" COLSPAN="5" BGCOLOR="#cccccc"><SPACER TYPE="block" HEIGHT="1"></TD>
+		<TD HEIGHT="1" COLSPAN="5" BGCOLOR="#cccccc"></TD>
 	</TR>
 		
 	<TR>
-		<TD HEIGHT="2" COLSPAN="5"><SPACER TYPE="block" HEIGHT="2"></TD>
+		<TD HEIGHT="2" COLSPAN="5"></TD>
 	</TR>
 	<TR>
 		<TD VALIGN="top" CLASS="TableDataHeader">Depends On:</TD>
@@ -230,10 +230,10 @@
 		<TD VALIGN="top" CLASS="TableData">??</TD>
 	</TR>
 	<TR>
-		<TD HEIGHT="2" COLSPAN="5"><SPACER TYPE="block" HEIGHT="2"></TD>
+		<TD HEIGHT="2" COLSPAN="5"></TD>
 	</TR>
 	<TR>
-		<TD HEIGHT="1" COLSPAN="5" BGCOLOR="#cccccc"><SPACER TYPE="block" HEIGHT="1"></TD>
+		<TD HEIGHT="1" COLSPAN="5" BGCOLOR="#cccccc"></TD>
 	</TR>
 </TABLE>
 <P>
@@ -244,23 +244,23 @@
 </TABLE>
 <TABLE BORDER="0" CELLPADDING="0" CELLSPACING="0" WIDTH="100%">
 	<TR>
-		<TD HEIGHT="2" COLSPAN="5"><SPACER TYPE="block" HEIGHT="2"></TD>
+		<TD HEIGHT="2" COLSPAN="5"></TD>
 	</TR>
 	<TR>
 		<TD CLASS="TableDataHeader" nowrap>From: <SPAN CLASS="TableData"><A HREF="mailto:bob@collab.net">bob@collab.net</A></SPAN></TD>
 		<TD CLASS="TableDataHeader" nowrap>Date: <SPAN CLASS="TableData">2000-08-12</SPAN></TD>
 	</TR>
 	<TR>
-		<TD HEIGHT="4" COLSPAN="5"><SPACER TYPE="block" HEIGHT="4"></TD>
+		<TD HEIGHT="4" COLSPAN="5"></TD>
 	</TR>
 	<TR>
 		<TD COLSPAN="2" CLASS="TableData">The Java SWING widget set is only cross-platform if you are using version 1.34 from Sun Microsystems. Issue #12856, #30856, and #2945 are also duplicates. Gervase needs to clean up this code.</TD>
 	</TR>
 	<TR>
-		<TD HEIGHT="4" COLSPAN="5"><SPACER TYPE="block" HEIGHT="4"></TD>
+		<TD HEIGHT="4" COLSPAN="5"></TD>
 	</TR>
 	<TR>
-		<TD HEIGHT="1" COLSPAN="5" BGCOLOR="#cccccc"><SPACER TYPE="block" HEIGHT="1"></TD>
+		<TD HEIGHT="1" COLSPAN="5" BGCOLOR="#cccccc"></TD>
 	</TR>
 	
 	<TR>
@@ -268,16 +268,16 @@
 		<TD CLASS="TableDataHeader" nowrap>Date: <SPAN CLASS="TableData">2000-08-12</SPAN></TD>
 	</TR>
 	<TR>
-		<TD HEIGHT="4" COLSPAN="5"><SPACER TYPE="block" HEIGHT="4"></TD>
+		<TD HEIGHT="4" COLSPAN="5"></TD>
 	</TR>
 	<TR>
 		<TD COLSPAN="2" CLASS="TableData">Java is meant to be a cross-platform programming lnaguage, not a cross-platform user interface language. If using the Gecko browser this project can take advantage of the XUL language from Mozilla.</TD>
 	</TR>
 	<TR>
-		<TD HEIGHT="4" COLSPAN="5"><SPACER TYPE="block" HEIGHT="4"></TD>
+		<TD HEIGHT="4" COLSPAN="5"></TD>
 	</TR>
 	<TR>
-		<TD HEIGHT="1" COLSPAN="5" BGCOLOR="#cccccc"><SPACER TYPE="block" HEIGHT="1"></TD>
+		<TD HEIGHT="1" COLSPAN="5" BGCOLOR="#cccccc"></TD>
 	</TR>
 </TABLE>
 		</TD>
