--- a/src/templates/screens/Start2.vm
+++ b/src/templates/screens/Start2.vm
@@ -6,10 +6,10 @@
   </TD>
  </TR>
  <TR>
-  <TD HEIGHT="1" BGCOLOR="#000000"><SPACER TYPE="block" HEIGHT="1"></TD>
+  <TD HEIGHT="1" BGCOLOR="#000000"></TD>
  </TR>
  <TR>
-  <TD HEIGHT="2" BGCOLOR="#cccccc"><SPACER TYPE="block" HEIGHT="2"></TD>
+  <TD HEIGHT="2" BGCOLOR="#cccccc"></TD>
  </TR>
 </TABLE>
 
@@ -66,7 +66,7 @@
     <TR>
       <TD COLSPAN="9">
         <TABLE BORDER="0" CELLPADDING="0" CELLSPACING="0" WIDTH="100%">
-	  <TR><TD BGCOLOR="#CCCCCC" HEIGHT="1"><SPACER HEIGHT="1" TYPE="block"></TD></TR>
+	  <TR><TD BGCOLOR="#CCCCCC" HEIGHT="1"></TD></TR>
 	</TABLE>
       </TD>
     </TR>
@@ -83,7 +83,7 @@
     <TR>
       <TD COLSPAN="9">
 	<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="0" WIDTH="100%">
-	  <TR><TD BGCOLOR="#CCCCCC" HEIGHT="1"><SPACER HEIGHT="1" TYPE="block"></TD></TR>
+	  <TR><TD BGCOLOR="#CCCCCC" HEIGHT="1"></TD></TR>
 	</TABLE>
       </TD>
     </TR>
@@ -119,7 +119,7 @@
     <TR>
       <TD COLSPAN="9">
         <TABLE BORDER="0" CELLPADDING="0" CELLSPACING="0" WIDTH="100%">
-	  <TR><TD BGCOLOR="#CCCCCC" HEIGHT="1"><SPACER HEIGHT="1" TYPE="block"></TD></TR>
+	  <TR><TD BGCOLOR="#CCCCCC" HEIGHT="1"></TD></TR>
 	</TABLE>
       </TD>
     </TR>
@@ -236,7 +236,7 @@
     <TR>
       <TD COLSPAN="2">
 	<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="0" WIDTH="100%">
-	  <TR><TD BGCOLOR="#CCCCCC" HEIGHT="1"><SPACER HEIGHT="1" TYPE="block"></TD></TR>
+	  <TR><TD BGCOLOR="#CCCCCC" HEIGHT="1"></TD></TR>
 	</TABLE>
       </TD>
     </TR>
