--- a/src/templates/screens/admin/DeleteItem.vm
+++ b/src/templates/screens/admin/DeleteItem.vm
@@ -38,7 +38,7 @@
 </td>
 </tr>
 <tr>
-<td height="1" bgcolor="#000000"><spacer type="block" height="1"></td>
+<td height="1" bgcolor="#000000"></td>
 </tr>
 </table>
 
